# xitorch

./: .flake8  .gitignore  .readthedocs.yml  LICENSE  NOTICE  README.md  asv.conf.json  codecov.yml  mypy.ini  pyproject.toml  release.sh  requirements.txt  setup-requirements.txt  setup.py  test-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lint.yml  package.yaml  publish.yaml  python-package.yml
benchmarks/: README.md  benchmarks_solve.py
comptorch/core/: editmodule.py  linop.py  module.py
comptorch/linfcns/: solve.py
comptorch/nlfcns/: rootfinder.py
comptorch/tests/: test_editmodule.py  test_linop.py  test_module.py  test_nlfcns.py
comptorch/utils/: attr.py  debug.py  misc.py
doc/: .gitignore  Makefile  conf.py  index.rst  make.bat  requirements.txt
doc/api/: index.rst  rootfinder.rst  toc.json
doc/getstart/: contribute.rst  custom_method.rst  debugging.rst  functional.rst  installation.rst  linearop.rst
doc/notes/: deriv_symeig.rst  index.rst  installation.rst
examples/01-mirror-design/: main.py
examples/02-molecular-dynamics/: main.py
examples/03-ising-model/: main.py
lintorch/: __init__.py
lintorch/_core/: editable_module.py  linop.py  pure_function.py
lintorch/_impls/: README.md
lintorch/_maths/: rootfinder.py
lintorch/_tests/: test_editable_module.py  test_integrate.py  test_jac.py  test_linop.py  test_linop_fcns.py  test_optimize.py  test_wrap_nnmodule.py
lintorch/_utils/: assertfuncs.py  attr.py  misc.py  tensor.py  tupleops.py
lintorch/core/: base.py  basic.py  editable_module.py  filler.py  linop.py  typeparser.py
lintorch/debug/: __main__.py
lintorch/fcns/: equil.py  lsymeig.py  solve.py  solve2.py
lintorch/funcs/: jac.py  lsymeig.py  rootfinder.py  rootfinder2.py  solve.py  symeig.py
lintorch/grad/: __init__.py  jachess.py
lintorch/integrate/: __init__.py  mcquad.py  quad.py  solve_ivp.py
lintorch/linalg/: solve.py  symeig.py
lintorch/linop/: base.py  lsymeig.py  solve.py
lintorch/maths/: rootfinder.py
lintorch/nlfcns/: equil.py  opt.py  rootfinder.py  rootfinder2.py  util.py
lintorch/optimize/: rootfinder.py
lintorch/tests/: test_editable_module.py  test_fcns.py  test_grads.py  test_jac.py  test_linop.py  test_linop_fcns.py  test_module.py  test_nlfcns.py  test_wrap_nnmodule.py  utils.py
lintorch/utils/: attr.py  bcast.py  debug.py  debugmodes.py  decorators.py  exceptions.py  fd.py  misc.py  tensor.py
tests/: test_editable_module.py  test_jac.py  test_linop.py  test_linop_fcns.py  test_optimize.py  test_wrap_nnmodule.py  utils.py
xitorch/: __init__.py  example.py  version.py
xitorch/_core/: editable_module.py  linop.py  packer.py  pure_function.py  typeparser.py
xitorch/_docstr/: api_docstr.py
xitorch/_impls/: README.md
xitorch/_utils/: eig.py  (+10 more)
(+123 files in other folders)
