[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "xitorch"
version = "0.0.0"
description = "Differentiable scientific computing library"
authors = ["mfkasim1 <firman.kasim@gmail.com>", "KarimAED <karim@aedin.dev>"]
readme = "README.md"
homepage = "https://xitorch.readthedocs.io/"
repository = "https://github.com/xitorch/xitorch/tree/master/"
license = "MIT"
keywords = ["project", "library", "linear-algebra", "autograd", "functionals"]
classifiers = [
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Physics",
        "Topic :: Scientific/Engineering :: Mathematics",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
    ]

[tool.poetry.dependencies]
python = "<3.12,>=3.8.1"
numpy = ">=1.24.1"
scipy = ">=1.10.0"
torch = ">=1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
mypy = ">=0.782"
pytest-cov = ">=2.10"
ninja = ">=1.10.0"
flake8 = "^6.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = """
{%- if distance == 0 -%}
        {{ serialize_pep440(base) }}
{%- else -%}
        {%- if branch == 'master' -%}
                {{serialize_pep440(bump_version(base, index=1), dev=timestamp)}}
        {%- else -%}
                {{serialize_pep440(bump_version(base, index=1))}}.dev+{{commit}}
        {%- endif -%}
{%- endif -%}
"""
